@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-05T01:01:43Z",
+  "timestamp" : "2022-07-05T08:14:50Z",
   "count_outdated" : 376,
   "uniques_outdated" : 203,
-  "count" : 399,
-  "uniques" : 217,
+  "count" : 400,
+  "uniques" : 218,
   "clones" : [
     {
       "timestamp": "2022-06-21T00:00:00Z",
@@ -91,6 +91,13 @@
     },
     {
       "timestamp": "2022-07-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
