@@ -1,5 +1,5 @@
 {
-  "count": 23,
+  "count": 24,
   "uniques": 2,
   "clones": [
     {
@@ -64,6 +64,11 @@
     },
     {
       "timestamp": "2022-07-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
